Fix occasional squared left tab edge at 150% scale

I don't (yet) know why this fixes the issue, but it certainly does. This
diff *should* be a no-op, changing an rLineTo to the equivalent lineTo,
but I guess the former runs into a bug in skia.

Stepping through this in the debugger reveals that there is some
floating-point error in the path's point sequence that the rLineTo
propagates and the lineTo obviously does not.  Apparently 0.5000015259
vs. 0.5 or 53.0000038 vs 53 makes a difference to skia when it's
calculating the path intersection.  ¯\_(ツ)_/¯

Bug: 864280
Change-Id: I06ba430f7f62f075102975e1e3db4b8a3292c879
Reviewed-on: https://chromium-review.googlesource.com/1141292
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577233}
Former-commit-id: f6b99e933c4ce14da242198f955500be9d5587ca